# teaching-project-git

./: README.md  kubeconfig  nginx-example.yaml  nginx-service.yaml  pyproject.toml  wordpress-database.yaml
.circleci/: config.yml
teaching_project/: squared_function.py
test/: test_squared_function.py
